// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should return multiple correct path arrays 1`] = `
[
  [
    {
      "children": [
        {
          "children": [],
          "label": "a-1",
          "value": 2,
        },
      ],
      "label": "a",
      "value": 1,
    },
  ],
  [
    {
      "children": [
        {
          "children": [],
          "label": "a-2",
          "value": 2,
        },
      ],
      "label": "a",
      "value": 1,
    },
  ],
]
`;

exports[`should return the correct array of paths 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "label": "a-1",
        "value": "1-1",
      },
      {
        "children": [
          {
            "children": [],
            "label": "a-2-1",
            "value": "1-2-1",
          },
        ],
        "label": "a-2",
        "value": "1-2",
      },
      {
        "children": [
          {
            "children": [],
            "label": "a-3-1",
            "value": "1-3-1",
          },
        ],
        "label": "a-3",
        "value": "1-3",
      },
    ],
    "label": "a",
    "value": "1",
  },
  {
    "children": [
      {
        "children": [],
        "label": "a-2-1",
        "value": "1-2-1",
      },
    ],
    "label": "a-2",
    "value": "1-2",
  },
  {
    "children": [],
    "label": "a-2-1",
    "value": "1-2-1",
  },
]
`;
